chore: fix mainEditor margin to align

--- a/src/less/components/editors.less
+++ b/src/less/components/editors.less
@@ -5,10 +5,23 @@
 }
 
 .mainEditor > .mosaic-root {
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  inset: 0;
+
+  :first-child {
+    margin-top: 0;
+  }
+
+  :last-child {
+    margin-bottom: 0;
+  }
+
+  .mosaic-split.-row + .mosaic-tile {
+    margin-top: 0;
+  }
+
+  .mosaic-tile:has(+ .mosaic-split.-row) {
+    margin-bottom: 0;
+  }
 }
 
 .mosaic-window-toolbar {
